Table layout moved & variables added in backend

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
         <input name = "formSub" type="submit">
         <p1 id="submitText">test</p1>
     </form>
-    <div id = "spacer"></div>
-    <div id = "tblBalanceTitle">
+    <div id = "tbls">
+        <div id = "spacer"></div>
+        <div class = "tblTitle">
         <h3> Balance Statement </h3>
-    </div>
-    <div id = "tableBalanceStatement">
-        <table border="1">
+        </div>
+        <div id = "tableBalanceStatement">
+        <table class="tbl" border="1">
             <tr>
                 <th> Year </th>
                 <th> Company Name </th>
@@ -57,8 +58,81 @@
                 <td> AAPL </td>
             </tr>
         </table>
+        </div>
+        <div id = "spacer"></div>
+        <div class = "tblTitle">
+        <h3> Cashflow Statement </h3>
+        </div>
+        <div id = "cashflowStatement">
+        <table class="tbl" border="1">
+            <tr>
+                <th> Year </th>
+                <th> Company Name </th>
+                <th> Ticker </th>
+                <th> Cash </th>
+                <th> Net receivables </th>
+                
+            </tr>
+            <tr>
+                <td> 2021 </td>
+                <td> Apple </td>
+                <td> AAPL </td>
+            </tr>
+            <tr> 
+                <td> 2020 </td>
+                <td> Apple </td>
+                <td> AAPL </td>
+            </tr>
+            <tr> 
+                <td> 2019 </td>
+                <td> Apple </td>
+                <td> AAPL </td>
+            </tr>
+            <tr> 
+                <td> 2018 </td>
+                <td> Apple </td>
+                <td> AAPL </td>
+            </tr>
+        </table>
+        </div>
+        <div id = "spacer"></div>
+        <div class = "tblTitle">
+        <h3> Income Statement </h3>
+        </div>
+        <div id = "tableIncomeStatement">
+        <table class="tbl" border="1">
+            <tr>
+                <th> Year </th>
+                <th> Company Name </th>
+                <th> Ticker </th>
+                <th> Cash </th>
+                <th> Net receivables </th>
+                
+            </tr>
+            <tr>
+                <td> 2021 </td>
+                <td> Apple </td>
+                <td> AAPL </td>
+            </tr>
+            <tr> 
+                <td> 2020 </td>
+                <td> Apple </td>
+                <td> AAPL </td>
+            </tr>
+            <tr> 
+                <td> 2019 </td>
+                <td> Apple </td>
+                <td> AAPL </td>
+            </tr>
+            <tr> 
+                <td> 2018 </td>
+                <td> Apple </td>
+                <td> AAPL </td>
+            </tr>
+        </table>
+        </div>
+        <div id = "info"> 
     </div>
-    <div id = "info"> 
         <p1> information </p1>
     </div>
     <div>
