--- a/index.html
+++ b/index.html
@@ -4,21 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src>"index.js"</script>
+    <script src> "server.js"</script>
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+    <script src="https://kit.fontawesome.com/b25b63590a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Investment Analysis</title>
 </head>
+
 <body>
     <div id = "navBar">
-        <p1> formAwesome popup for menu here </p1>
-        <p1> </p1>
+        <i class="fa-solid fa-bars"></i>
+       
 
     </div>
     <h1 id="pageTitle"> Investment Analysis </h1>
 
     <h2 id ="formCmd"> Please type in a ticker for a stock below:</h2>
-    <form id="formSub">
-        <input name = "ticker" type="text">
+    <form id="formSub" method = "get" action="/">
+        <input id = "tickerId" name = "ticker" type="text">
         <input name = "formSub" type="submit">
         <p1 id="submitText">test</p1>
     </form>
