Added Three JS frontend first draught

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    
     <h1> ADD THREE JS GRAPHIC HERE </h1>
     <div id="threeGlobeDiv">
-        <canvas id = "threeGlobe" width="1000" height="700" ></canvas>      
+        <canvas id = "threeGlobe" width="100px" height="200px" ></canvas>      
     </div>
     <div id = "footer"></div>
 
