POC for get requests to server

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <input name = "formSub" type="submit">
         <p1 id="submitText">test</p1>
     </form>
+    <button id="ajaxButton" style="margin-left: 20em"> Click Me </button>
    
     <h1> ADD THREE JS GRAPHIC HERE </h1>
     <div id="threeGlobeDiv">
