--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         <input name = "formSub" type="submit">
         <p1 id="submitText">test</p1>
     </form>
-    <button id="ajaxButton" style="margin-left: 20em"> Click Me </button>
+    <button id="ajaxButton" onclick="location.href = 'tables.html'" style="margin-left: 20em"> Click Me </button>
    
     <h1> ADD THREE JS GRAPHIC HERE </h1>
     <div id="threeGlobeDiv">
