--- a/src/submitResult.html
+++ b/src/submitResult.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src> "server.js"</script>
+    <script src> "submitResult.js"</script>
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script src="https://kit.fontawesome.com/b25b63590a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
