POC  server-website display.Working on Table loop

--- a/src/test.html
+++ b/src/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="test.js"></script>
+    <script src="test.js" defer></script>
 
     <title>Document</title>
 </head>
@@ -57,19 +57,73 @@
         <h3> Cashflow Statement </h3>
         </div>
         <div id = "cashflowStatement">
-        <table class="tbl" border="1">
-           <thead>
+            <table class="tbl" border="1">
                 <tr>
-                    <th>#</th>
-                    <th>Task</th>
+                    <th> Year </th>
+                    <th> Company Name </th>
+                    <th> Ticker </th>
+                    <th> Cash </th>
+                    <th> Net Income </th>
+                    <th> Depreciation </th>
+                    <th> Change to Net Income </th>
+                    <th> Change to Account Receivables </th>
+                    <th> Change to Liabilties </th>
+                    <th> Change to Inventory </th>
+                    <th> Change to Operating Activities </th>
+                    <th> Total Cash from Operating Activities </th>
+                    <th> Capital Expenditures </th>
+                    <th> Investments </th>
+                    <th> Other Cash Flows From Investing Activities </th>
+                    <th> Total Cash Flows From Investing Activities </th>
+                    <th> Dividends Paid </th>
+                    <th> Net Borrowings </th>
+                    <th> Other Cashflows from Financing Activities </th>
+                    <th> Total Cashflows from Financing Activities </th>
+                    <th> Change in Cash </th>
+                    <th> Repurchase of Stock </th>                    
                 </tr>
-           </thead>
-           <tbody>
-                <td>1</td>
-                <td>Starting new task</td>
-           </tbody>
-        </table>
-        </div>
+                <tr>
+                    <th>2021</th>
+                    <th>Apple</th>
+                    <th>AAPL</th>
+                    <div id="testDiv"></div>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                    <th class="c2021"></th>
+                </tr>
+                <tr> 
+                    <td> 2020 </td>
+                    <td> Apple </td>
+                    <td> AAPL </td>
+                </tr>
+                <tr> 
+                    <td> 2019 </td>
+                    <td> Apple </td>
+                    <td> AAPL </td>
+                </tr>
+                <tr> 
+                    <td> 2018 </td>
+                    <td> Apple </td>
+                    <td> AAPL </td>
+                </tr>
+            </table>
+            </div>
         <div id = "spacer"></div>
         <div class = "tblTitle">
         <h3> Income Statement </h3>
