--- a/src/submitResult.html
+++ b/src/submitResult.html
@@ -26,7 +26,7 @@
             <h2 class="bookLogicSubTitles"> Title 1 </h2>
             <div class="bookLogicContent">
             <p1> This is x value. This is why its important. The value is: </p1>
-            <p1> ---- put value here ---- </p1>
+            <div id ="testValue">  </div>
             <div> New Line </div>
             <p1> ---- Color/logic here ---- </p1>
             <div> New Line </div>
